# rust_teorie

./: Cargo.toml  README.md
Readme/: 13_Rust Loops.md  13_Rust Match.md  4_Rust Syntax.md  5_Rust Output.md  7_Rust Variables.md  8_Rust Data Types.md  Developer.md
Readme/0_Bölüm/: 1_The Rust Programming Language.md
Readme/10_Bölüm/: 3_Validating References with Lifetimes.md
Readme/11_Bölüm/: 1_How to Write Tests.md  2_Controlling How Tests Are Run.md  3_Test Organization.md
Readme/12_Bölüm/: 1_Accepting Command Line Arguments.md  2_Reading a File.md  3_Refactoring to Improve Modularity and Error Handling.md  5_Working with Environment Variables.md  6_Writing Error Messages to Standard Error Instead of Standard Output.md
Readme/13_Bölüm/: 0_Functional Language Features: Iterators and Closures.md  1_Closures: Anonymous Functions That Capture Their Environment.md  2_Processing a Series of Items with Iterators.md  3_Improving Our I-O Project.md  4_Comparing Performance Loops vs. Iterators.md
Readme/14_Bölüm/: 0_More About Cargo and Crates.md  1_Customizing Builds with Release Profiles.md  2_Publishing a Crate to Crates.md  3_Cargo Workspaces.md  5_Extending Cargo with Custom Commands.md
Readme/15_Bölüm/: 1_Using BoxT to Point to Data on the Heap.md  3__Running Code on Cleanup with the Drop Trait.md  6_Reference Cycles Can Leak Memory.md  (+1 more)
Variables_and_Mutability/: Cargo.toml
adder/: Cargo.toml  README.md
collections_project/: Cargo.toml  README.md  README_DE.md
collections_project/examples/: collections_examples.rs
collections_project/src/: book.rs  lib.rs  library.rs  main.rs
control_flow/: Cargo.toml
ecommerce_system/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
ecommerce_system/cli/: Cargo.toml
ecommerce_system/cli/src/: main.rs
ecommerce_system/core/: Cargo.toml
ecommerce_system/core/src/: error.rs  lib.rs
ecommerce_system/core/src/orders/: cart.rs  mod.rs  payment.rs
ecommerce_system/core/src/products/: catalog.rs  inventory.rs  mod.rs  validation.rs
ecommerce_system/core/src/users/: auth.rs  mod.rs  profile.rs  validation.rs
ecommerce_system/core/src/utils/: formatting.rs  mod.rs  validation.rs
ecommerce_system/web/: Cargo.toml
ecommerce_system/web/src/: main.rs
enum_project/: Cargo.toml
error_handling_project/: Cargo.toml  README.md  README_DE.md  README_TR.md  test_ok.txt
funktion/: Cargo.toml
generics_project/: Cargo.toml  README.md
get-dependencies/: Cargo.toml
guessing_game/: InstallationLog.txt
ownership_project/: Cargo.toml  README.md
src/: bedingung_if_else.rs  guessing_game.rs  main.rs
structs_project/: Cargo.toml
(+503 files in other folders)
