[package]
name = "collections_project"
version = "0.1.0"
edition = "2021"
authors = ["Sizin Adınız <email@example.com>"]
description = "Rust Collections (Vector, String, HashMap) öğrenmek için kütüphane yönetim sistemi"

[[example]]
name = "collections_examples"
path = "examples/collections_examples.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
