[package]
name = "ecommerce-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for e-commerce system"

[dependencies]
# Local workspace dependency
ecommerce-core = { path = "../core" }

# CLI-specific dependencies
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"

# Add missing dependencies
rust_decimal = { version = "1.0", features = ["std"] }
rust_decimal_macros = "1.0"
num-traits = "0.2"


