[package]
name = "ecommerce-core"
version = "0.1.0"
edition = "2021"
description = "Core library for e-commerce system - Module organization demo"
authors = ["Rust Öğrencisi"]

[dependencies]
# Workspace dependencies
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }

# Core-specific dependencies
regex = "1.0"
rust_decimal = "1.0"
rust_decimal_macros = "1.0"
