[package]
name = "ecommerce-web"
version = "0.1.0"
edition = "2021"
description = "Web server for e-commerce system"

[dependencies]
# Local workspace dependency
ecommerce-core = { path = "../core" }

# Web-specific dependencies
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Additional dependencies for web API
rust_decimal = "1.0"
rust_decimal_macros = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

